--- a/styles.css
+++ b/styles.css
@@ -516,7 +516,7 @@
         
     /* Modal Styles */
     .modal {
-        display: none;
+        display: none !important;
         position: fixed;
         z-index: 1000;
         left: 0;
@@ -540,6 +540,7 @@
         transform: translateY(-50px);
         opacity: 0;
         animation: floatIn 1s forwards;
+        display:none !important;
     }
     
     .modal-content mh1 {
@@ -1026,7 +1027,7 @@ img {
     }
     
     .modal {
-        display: block;
+        display: none !important;
         position: fixed;
         z-index: 1000;
         left: 0;
@@ -1034,7 +1035,8 @@ img {
         width: 100%;
         height: 100%;
         overflow: auto;
-        background-color: rgba(0, 0, 0, 0.5);
+        background-color: rgba(0, 0, 0, 0.5)
+;
     }
     
     .modal-content {
@@ -1049,7 +1051,8 @@ img {
         align-items: center;
         transform: translateY(-50px);
         opacity: 0;
-        animation: floatIn 1s forwards;
+        animation: floatIn 1s forwards
+        display:none !important;
     }
 
           .modal-content mh1 {
