--- a/styles.css
+++ b/styles.css
@@ -516,7 +516,7 @@
         
     /* Modal Styles */
     .modal {
-        display: none !important;
+        display: block;
         position: fixed;
         z-index: 1000;
         left: 0;
@@ -540,7 +540,6 @@
         transform: translateY(-50px);
         opacity: 0;
         animation: floatIn 1s forwards;
-        display:none !important;
     }
     
     .modal-content mh1 {
@@ -1027,7 +1026,7 @@ img {
     }
     
     .modal {
-        display: none !important;
+        display: block;
         position: fixed;
         z-index: 1000;
         left: 0;
@@ -1052,7 +1051,6 @@ img {
         transform: translateY(-50px);
         opacity: 0;
         animation: floatIn 1s forwards
-        display:none !important;
     }
 
           .modal-content mh1 {
