--- a/styles.css
+++ b/styles.css
@@ -516,7 +516,7 @@
         
     /* Modal Styles */
     .modal {
-        display: block;
+        display: none;
         position: fixed;
         z-index: 1000;
         left: 0;
@@ -1026,7 +1026,7 @@ img {
     }
     
     .modal {
-        display: block;
+        display: none;
         position: fixed;
         z-index: 1000;
         left: 0;
