--- a/styles.css
+++ b/styles.css
@@ -90,346 +90,191 @@
     
     .button-and-image {
         display: flex;
-        align-items: center;
-        margin-top: 20px;
+        flex-direction: column;
+        justify-content: flex-start;
+        flex-wrap: wrap;
     }
     
-    .button1 {
+    .button {
         background-color: #FFB100;
         color: black;
         border: none;
-        border-radius: 25px;
-        padding: 1em 1.8em;
         font-size: 1em;
+        border-radius: 25px;
+        width: 9em;
+        padding: 0.75em 0.5em;
         cursor: pointer;
         font-weight: bold;
-        line-height: 16px;
-        min-width: 118px;
-        width: auto;
-        display: inline-block;
-        text-align: center;
-        cursor: pointer;
-        outline: none;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        text-decoration: none;
-        font-family: dm sans bold, sans-serif;
-        font-weight: 400;
-        vertical-align: top;
+        margin-left: -2em;
     }
     
-    .divider {
-        border-top: 0.5px solid grey;
-        margin: 0px 0 0 0;
-    }
+    .trustpilot {
+        width: 17em;
+        height: auto;
+        margin-left: -3.5em;
+        margin-top: 1em;
     
-    .dividerwide {
-        border-top: 15px solid grey;
-        margin: 0px 0 0 ;
-        margin-top: 30px;
-        width: 116.3em;
-    }
-    
-    
-    .blue-box {
-        display: flex;
-        align-items: center;
-        background-color: #E5F6F4;
-        padding: 2em;
-        margin-top: -0.5px;
-        justify-content: space-between;
-        position: relative;
-        height: 29em;
-        width: fit-content;
-    }
-    
-    .info-image {
-    width: 61%;
-    height: 106%;
-    object-fit: unset;
-    margin-right: 163px;
-    margin-top: -3.5px;
-        
-    }
-    
- 
-    .text-box {
-    margin-left: 293.5px;
-    margin-top: -28px;
-    width: 84em;
-    }
-    
-    .text-box h1 {
-        font-size: 56px;
-        font-family: 'DM Sans Bold', sans-serif;
-        font-weight: bold;
-        text-align: left;
-        width:11em;
-    }
-    
-    .text-box p {
-        font-size: 22px;
-        margin: 10px 0;
-        width: 21em;
-        text-align: left;
-    }
-    .text-box p1 {
-        font-size: 20px;
-        margin: 10px 0;
-            width: 350px;
-        text-align: left;
-    }
-    .text-box mh1 {
-        font-size: 56px;
-        font-family: 'DM Sans Bold', sans-serif;
-        font-weight: bold;
-        text-align: left;
-    }
-    
-    .text-box m {
-        font-size: 22px;
-        margin: 10px 0;
-        width: 520px;
-        text-align: left;
-    }
-    .text-box m1 {
-        font-size: 20px;
-        margin: 10px 0;
-            width: 350px;
-        text-align: left;
-    }
-    .text-box .button {
-        margin-top: 20px;
-    }
-    
-    .white-box {
-        display: flex;
-        align-items: center;
-        background-color: #FFFFFF;
-        padding: 20px;
-        margin-top: -0.5px;
-        position: relative;
-        height: 450px;
     }
     
     .text-body {
-        min-height: 500px;
-        padding: 30px;
-        margin-left: 293.5px;
-        margin-top: 210px;
-        width: 625px;
-         position: absolute;
+        padding: 2em;
+        width: 100%;
+        box-sizing: border-box;
     }
     
     .text-body h2 {
-        font-size: 32px;
-        font-family: 'DM Sans Bold', sans-serif;
-        font-weight: bold;
+        font-size: 2em;
+        margin-top: 1em;
         text-align: left;
-        margin-top: 20px;
     }
     
-    .text-body p2  {
-        font-size: 16px;
-        font-family: 'DM Sans', sans-serif;
-        font-weight: medium;
+    .text-body p {
+        font-size: 1.25em;
+        margin-top: 0;
         text-align: left;
-        margin-top: 20px;
+    }
+    
+    .funding-video {
+        width: 100%;
+        height: auto;
+    }
+    
+    .fund-image {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+        display:none;
     }
     
     .text-body-low {
-        min-height: 500px;
-        padding: 30px;
-        margin-top: 210px;
-        width: 550px;
-        position: absolute;
-        margin-left: 1022px;
-    }
-    
-    .text-body-low h2 {
-        font-size: 32px;
-        font-family: 'DM Sans Bold', sans-serif;
-        font-weight: bold;
-        text-align: left;
-        margin-top: 20px;
-    }
-    
-    .text-body-low p2  {
-        font-size: 16px;
-        font-family: 'DM Sans', sans-serif;
-        font-weight: medium;
-        text-align: left;
-        margin-top: 20px;
+        padding: 2em;
+        width: 100%;
+        box-sizing: border-box;
     }
     
     .text-body-out {
-        min-height: 200px;
-        padding: 30px;
-        margin-top: -230px;
-        width: 900px;
-        position: absolute;
-        margin-left: 400px;
-        text-align: center;
+        padding: 2em;
+        width: 100%;
+        box-sizing: border-box;
     }
     
     .text-body-out h3 {
-        font-size: 44px;
-        font-family: 'DM Sans Bold', sans-serif;
-        font-weight: bold;
-        text-align: center;
-        margin-top: 20px;
-        margin-bottom: 25px;
+        font-size: 2em;
+        margin-top: 0;
+        text-align: left;
     }
     
-    .text-body-out p3  {
-        font-size: 16px;
-        font-family: 'DM Sans', sans-serif;
-        font-weight: medium;
-        text-align: center;
-        margin-top: 20px;
+    .text-body-out p {
+        font-size: 1.25em;
+        margin-top: 0;
+        text-align: left;
     }
-        .text-small-left {
-         min-height: 200px;
-        padding: 15px;
-        margin-top: -850px;
-        width: 371px;
-        position: absolute;
-        margin-left: 932px;
-        text-align: center;
+    
+    .text-small-left {
+        padding: 2em;
+        width: 100%;
+        box-sizing: border-box;
+        margin-top: -1.5em;
     }
     
     .text-small-left h4 {
-        font-size: 18px;
-        font-family: 'DM Sans Bold', sans-serif;
-        font-weight: bold;
-        text-align: center;
-        margin-top: 20px;
-        margin-bottom: 25px;
+        font-size: 1.5em;
+        margin-top: 0;
+        text-align: left;
     }
     
-    .text-small-left p4  {
-        font-size: 16px;
-        font-family: 'DM Sans', sans-serif;
-        font-weight: medium;
-        text-align: center;
-        margin-top: 20px;
+    .text-small-left p {
+        font-size: 1.25em;
+        margin-top: 0;
+        text-align: left;
     }
-    
     
     .text-small-right {
-         min-height: 200px;
-        padding: 15px;
-        margin-top: -850px;
-        width: 371px;
-        position: absolute;
-        margin-left: 412px;
-        text-align: center;
+        padding: 2em;
+        width: 100%;
+        box-sizing: border-box;
     }
     
     .text-small-right h4 {
-        font-size: 18px;
-        font-family: 'DM Sans Bold', sans-serif;
-        font-weight: bold;
-        text-align: center;
-        margin-top: 20px;
-        margin-bottom: 25px;
+        font-size: 1.5em;
+        margin-top: 0;
+        text-align: left;
     }
     
-    .text-small-right p4  {
-        font-size: 16px;
-        font-family: 'DM Sans', sans-serif;
-        font-weight: medium;
-        text-align: center;
-        margin-top: 20px;
+    .text-small-right p {
+        font-size: 1.25em;
+        margin-top: 0;
+        text-align: left;
+    }
+
+         .text-small-leftd {
+        padding: 2em;
+        width: 100%;
+        box-sizing: border-box;
+        margin-top: -5.5em;
     }
     
-    .text-small-leftd {
-         min-height: 200px;
-        padding: 15px;
-        margin-top: -620px;
-        width: 371px;
-        position: absolute;
-        margin-left: 932px;
-        text-align: center;
-    }
+.text-small-leftd h4 {
+    font-size: 1.5em;
+    margin-top: 3em;
+    text-align: left;
+}
     
-    .text-small-leftd h4 {
-        font-size: 18px;
-        font-family: 'DM Sans Bold', sans-serif;
-        font-weight: bold;
-        text-align: center;
-        margin-top: 56px;
-        margin-bottom: 25px;
+    .text-small-leftd p {
+        font-size: 1.25em;
+        margin-top: 0;
+        text-align: left;
     }
-    
-    .text-small-leftd p4  {
-        font-size: 16px;
-        font-family: 'DM Sans', sans-serif;
-        font-weight: medium;
-        text-align: center;
-        margin-top: 20px;
-    }
-    
     
     .text-small-rightd {
-         min-height: 200px;
-        padding: 15px;
-        margin-top: -620px;
-        width: 371px;
-        position: absolute;
-        margin-left: 412px;
-        text-align: center;
+        padding: 2em;
+        width: 100%;
+        box-sizing: border-box;
     }
     
     .text-small-rightd h4 {
+        font-size: 1.5em;
+        margin-top: 0;
+        text-align: left;
+    }
+    
+    .text-small-rightd p {
+        font-size: 1.25em;
+        margin-top: 0;
+        text-align: left;
+    }
+    
+    
+        .grey-box {
+           display: flex;
+    align-items: center;
+    background-color: #262626;
+    padding: 20px;
+    margin-top: -0.5px;
+    justify-content: center;
+    position: relative;
+    height: 33em;
+    width: -webkit-fill-available;
+    margin-left: -20px;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: space-around;
+    }
+    
+    .text-tes-left {
+      padding: 15px;
+    width: 371px;
+    text-align: center;
+    color: white;
+    }
+    
+    .text-tes-left h5 {
         font-size: 18px;
         font-family: 'DM Sans Bold', sans-serif;
         font-weight: bold;
         text-align: center;
-       margin-top: 56px;
-        margin-bottom: 25px;
-    }
-    
-    .text-small-rightd p4  {
-        font-size: 16px;
-        font-family: 'DM Sans', sans-serif;
-        font-weight: medium;
-        text-align: center;
         margin-top: 20px;
-    }
-    
-    .grey-box {
-        display: flex;
-        align-items: center;
-        background-color: #262626;
-        padding: 20px;
-          margin-top: 89.5px;
-        justify-content: space-between;
-        position: relative;
-        height: 450px;
-        width: 1825px;
-        margin-left:-20px;
-    }
-    
-    .text-tes-left {
-         min-height: 200px;
-        padding: 15px;
-        margin-top: 389px;
-        width: 371px;
-        position: absolute;
-        margin-left: 353px;
-        text-align: center;
-        color:white;
-    }
-    
-    .text-tes-left h5 {
-      font-size: 18px;
-    font-family: 'DM Sans Bold', sans-serif;
-    font-weight: bold;
-    text-align: center;
-    margin-top: 6px;
-    margin-bottom: 25px;
+        margin-bottom: 25px;
     }
     
     .text-tes-left p5  {
@@ -438,29 +283,23 @@
         font-weight: medium;
         text-align: center;
         margin-top: 20px;
-            width: 24em;
     }
     
         .text-tes-right {
-         min-height: 200px;
-        padding: 15px;
-        margin-top: 379px;
-        width: 371px;
-        position: absolute;
-          margin-left: 957px;
-        text-align: center;
-            color:white;
+     padding: 15px;
+    width: 371px;
+    text-align: center;
+    color: white;
     }
     
     .text-tes-right h5 {
         font-size: 18px;
-    font-family: 'DM Sans Bold', sans-serif;
-    font-weight: bold;
-    text-align: center;
-       margin-top: 13px;
-    margin-right: 36px;
-    margin-bottom: 25px;
-    width: 24em;
+        font-family: 'DM Sans Bold', sans-serif;
+        font-weight: bold;
+        text-align: center;
+        margin-top: 20px;
+        margin-bottom: 25px;
+        
     }
     
     .text-tes-right p5  {
@@ -473,45 +312,25 @@
     
     
     .fund-image {
-        width: 500px;
-        height: auto;
-        margin-right: 135px;
-        margin-top: -53.5px;
-        position: absolute;
-        margin-left: 293.5px;
+      width: 675px;
+    height: auto;
     }
     
     .funding-video {
         width: 500px;
         height: auto;
-        margin-right: 135px;
-        margin-top: 5.5px;
-        position: absolute;
-        margin-left: 1050px;
+
     }
     
     .testimony-right {
         width: 500px;
         height: auto;
-        margin-top: -114.5px;
-        position: absolute;
-        margin-left: 929px;
+
     }
         .testimony-left {
         width: 500px;
         height: auto;
-        margin-top: -115px;
-        position: absolute;
-        margin-left: 305px;
-    }
 
-    .bookingout-image {
-
-    width: 350px;
-    height: auto;
-    margin-top: -113.5px;
-    position: absolute;
-    margin-left: 965px;
     }
         
     /* Modal Styles */
